--- a/u/Vagrantfile
+++ b/u/Vagrantfile
@@ -41,8 +41,8 @@ Vagrant.configure(2) do |config|
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
   # config.vm.synced_folder "../data", "/vagrant_data"
-  config.vm.synced_folder "../data", "/vagrant_data"
-  config.vm.synced_folder "../../cyber/tps/code", "/vagrant_code"
+  config.vm.synced_folder "../../data", "/vagrant_data"
+  config.vm.synced_folder "../../../cyber/tps/code", "/vagrant_code"
 
 
   # Provider-specific configuration so you can fine-tune various
